Fix bug - Break tasks when not fitting in a single line

--- a/src/components/todo-list/item/TodoListItem.scss
+++ b/src/components/todo-list/item/TodoListItem.scss
@@ -63,6 +63,8 @@
     .todo-name {
 
         position: relative;
+        word-break: break-word;
+        max-width: 450px;
 
         &::after {
             content: ' ';
